--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -1,11 +1,114 @@
+.button-success,
+.button-error,
+.button-warning,
+.button-secondary {
+		color: white;
+		border-radius: 4px;
+		text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+.button-success {
+		background: rgb(28, 184, 65);
+		/* this is a green */
+}
+
+.button-error {
+		background: rgb(202, 60, 60);
+		/* this is a maroon */
+}
+
+.button-warning {
+		background: rgb(223, 117, 20);
+		/* this is an orange */
+}
+
+.button-secondary {
+		background: rgb(66, 184, 221);
+		/* this is a light blue */
+}
+
+
 button {
-	padding: 0.5rem 1.5rem;
+	/* padding: 0.5rem 1.5rem;
 	border-radius: 0.25rem;
+	margin-left: 0.25rem;
+	margin-right: 0.25rem;
+	margin-top: 0.25rem;
+	margin-bottom: 0.25rem; */
+
+	font-size: 100%;
+	padding: .5em 1em;
+	color: rgba(0,0,0,.8);
+	border: transparent;
+	background-color: #e6e6e6;
+	text-decoration: none;
+	border-radius: 2px;
+
+	display: inline-block;
+	line-height: normal;
+	white-space: nowrap;
+	vertical-align: middle;
+	text-align: center;
+	cursor: pointer;
+	-webkit-user-drag: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+
+	appearance: auto;
+	-webkit-writing-mode: horizontal-tb !important;
+	writing-mode: horizontal-tb !important;
+	text-rendering: auto;
+	color: -internal-light-dark(black, white);
+	letter-spacing: normal;
+	word-spacing: normal;
+	text-transform: none;
+	text-indent: 0px;
+	text-shadow: none;
+	display: inline-block;
+	text-align: center;
+	align-items: flex-start;
+	cursor: default;
+	background-color: -internal-light-dark(rgb(239, 239, 239), rgb(59, 59, 59));
+	box-sizing: border-box;
+	margin: 0em;
+	font: 400 16px Arial;
+	padding: 2px 10px;
+	border-width: 2px;
+	border-style: outset;
+	border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
+	border-image: initial;
+
 }
 
 button:hover {
 	cursor: pointer;
-	opacity: 0.8;
+	/* opacity: 0.8; */
+	background-image: -webkit-gradient(linear,left top,left bottom,from(transparent),color-stop(40%,rgba(0,0,0,.05)),to(rgba(0,0,0,.1)));
+	background-image: linear-gradient(transparent,rgba(0,0,0,.05) 40%,rgba(0,0,0,.1));
+}
+
+button:disabled {
+	cursor: not-allowed;
+	border: none;
+	background-image: none;
+	opacity: .4;	
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	pointer-events: none;
+}
+
+button:active {
+	-webkit-box-shadow: 0 0 0 1px rgb(0 0 0 / 15%) inset, 0 0 4px rgb(0 0 0 / 20%) inset;
+	box-shadow: inset 0 0 0 1px rgb(0 0 0 / 15%), inset 0 0 4px rgb(0 0 0 / 20%);
+	border-color: rgba(219, 219, 219, 0.705);
+}
+
+button:focus {
+	outline: 0;
 }
 
 button.download-button {
@@ -19,4 +122,41 @@ button.download-button:hover {
 button.info-modal-button {
 	font-size: larger;
 
+}
+
+button.bot-service-stop {
+	background-color: rgba(190, 9, 9, 0.959);
+	color: white;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+button.bot-service-start {
+	background-color: rgba(14, 126, 10, 0.959);
+	color: white;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+button.bot-service-status {
+	background-color: rgba(30, 110, 163, 0.959);
+	color: white;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+.button-xsmall {
+	font-size: 70%;
+}
+
+.button-small {
+	font-size: 85%;
+}
+
+.button-large {
+	font-size: 110%;
+}
+
+.button-xlarge {
+	font-size: 125%;
 }
