Make modals larger + add z index to modals
Fix glitch where button was coming through the modal from behind

--- a/styles/modals.css
+++ b/styles/modals.css
@@ -1,11 +1,12 @@
 .modal {
 	position: absolute;
-	height: 60vh;
+	height: 85vh;
 	width: 100vw;
 	bottom: 0;
 	left: 0;
 	right: 0;
 	background-color: rgba(255, 255, 255, 0.972);
+	z-index: 100;
 }
 
 .modal-content {
