Add background color back to modal action bar

--- a/styles/modals.css
+++ b/styles/modals.css
@@ -20,7 +20,7 @@
 .modal-action-bar {
 	padding: 1rem 1.5rem;
 	margin: 0;
-	/* background-color: rgba(153, 153, 153, 0.37); */
+	background-color: rgba(153, 153, 153, 0.37);
 	width: 100%;
 	border-top: solid 2px rgba(226, 226, 226, 0.678);
 }
