--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -46,7 +46,7 @@ button {
 	box-sizing: border-box;
 	margin: 0em;
 	font: 400 16px Arial;
-	padding: 2px 10px;
+	padding: 0.75rem 1.5rem;
 	border-width: 2px;
 	border-style: outset;
 	border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
@@ -57,8 +57,10 @@ button {
 .button-success,
 .button-error,
 .button-warning,
+.button-primary,
 .button-secondary {
 		color: white;
+		font-weight: 600;
 		border-radius: 4px;
 		text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
@@ -81,6 +83,11 @@ button {
 .button-secondary {
 		background: rgb(66, 184, 221);
 		/* this is a light blue */
+}
+
+.button-primary {
+	background: rgb(66, 184, 221);
+	/* this is a light blue */
 }
 
 button:hover {
