--- a/styles/modals.css
+++ b/styles/modals.css
@@ -1,6 +1,6 @@
 .modal {
 	position: absolute;
-	height: 85vh;
+	/* height: 85vh; */
 	width: 100vw;
 	bottom: 0;
 	left: 0;
@@ -19,7 +19,7 @@
 
 .modal-action-bar {
 	padding: 1rem 1.5rem;
-	margin: 0;
+	margin: 1rem;
 	background-color: rgba(153, 153, 153, 0.37);
 	width: 100%;
 	border-top: solid 2px rgba(226, 226, 226, 0.678);
@@ -39,6 +39,6 @@
 	position: absolute;
 	right: 0;
 	top: 0;
-	margin-top: 1rem;
+	margin-top: 1.75rem;
 	margin-right: 1rem;
 }
