--- a/styles/utility.css
+++ b/styles/utility.css
@@ -259,75 +259,75 @@ button, input {
 }
 
 .px-1 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-2 {
-  margin-left: 1rem;
-  margin-right: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-3 {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .px-4 {
-  margin-left: 2rem;
-  margin-right: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .py-1 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-2 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .py-3 {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .py-4 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pt-1 {
-  margin-top: 0.5rem;
+  padding-top: 0.5rem;
 }
 
 .pt-2 {
-  margin-top: 1rem;
+  padding-top: 1rem;
 }
 
 .pt-3 {
-  margin-top: 1.5rem;
+  padding-top: 1.5rem;
 }
 
 .pt-4 {
-  margin-top: 2rem;
+  padding-top: 2rem;
 }
 
 .pb-1 {
-  margin-bottom: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .pb-2 {
-  margin-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pb-3 {
-  margin-bottom: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pb-4 {
-  margin-bottom: 2rem;
+  padding-bottom: 2rem;
 }
 
 .w-100 {
