--- a/styles/alerts.css
+++ b/styles/alerts.css
@@ -1,6 +1,6 @@
 span.alert {
-	font-size: 12px;	
-	font-weight: bold;
+	font-size: 14px;	
+	font-weight: 600;
 	padding: 0.25rem 1rem;
 	border-radius: 0.25rem;
 }
