--- a/styles/modals.css
+++ b/styles/modals.css
@@ -10,14 +10,20 @@
 }
 
 .modal-content {
-	width: 100%;
-	overflow-y: auto;
+	width: 100vw;
+	overflow: auto;
 	padding: 1rem 2rem;
 	color: black;
 	font-size: 24px;
+	justify-self: start;
+	padding-bottom: 6rem;
 }
 
 .modal-action-bar {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
 	padding: 1rem 1.5rem;
 	margin: 0rem;
 	background-color: rgba(153, 153, 153, 0.37);
@@ -35,10 +41,12 @@
 }
 
 .modal-close-icon {
+	font-size: 20px;
+	font-weight: 600;
 	cursor: pointer;
 	position: absolute;
 	right: 0;
 	top: 0;
 	margin-top: 1.75rem;
-	margin-right: 1rem;
+	margin-right: 2rem;
 }
