--- a/styles/utility.css
+++ b/styles/utility.css
@@ -1,3 +1,8 @@
+.container {
+  margin: auto;
+  padding: 2rem 4rem;
+}
+
 .flex {
   display: flex;
 }
@@ -111,6 +116,9 @@ Align Items
 
 div.loading {
   position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -118,15 +126,15 @@ div.loading {
   width: 100vw;
   height: 100vh;
   margin: auto;
-  opacity: 75%;
+  opacity: 85%;
   text-align: center;
   font-size: 40px;
   line-height: 1;
-  z-index: 5;
+  z-index: 1000;
   vertical-align: middle;
   background-color: rgba(5, 71, 146, 0.897);
-  border-radius: 1rem;
   color: white;
+  backdrop-filter: blur(10px);
 }
 
 div.loading > h2 {
@@ -165,6 +173,56 @@ button, input {
   padding: 2rem;
   overflow-x: auto;
   max-width: 80vw;
+}
+
+.mx-auto {
+  margin-left: auto ;
+  margin-right: auto;
+}
+
+.ml-0 {
+  margin-left: 0rem;
+}
+
+.ml-1 {
+  margin-left: 0.5rem;
+}
+
+.ml-2 {
+  margin-left: 1rem;
+}
+
+.ml-3 {
+  margin-left: 1.5rem;
+}
+
+.ml-4 {
+  margin-left: 2rem;
+}
+
+.mr-0 {
+  margin-right: 0rem;
+}
+
+.mr-1 {
+  margin-right: 0.5rem;
+}
+
+.mr-2 {
+  margin-right: 1rem;
+}
+
+.mr-3 {
+  margin-right: 1.5rem;
+}
+
+.mr-4 {
+  margin-right: 2rem;
+}
+
+.mx-0 {
+  margin-left: 0rem;
+  margin-right: 0rem;
 }
 
 .mx-1 {
