--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,20 +1,2 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis&family=Montserrat&display=swap');
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: 'Montserrat', sans-serif; 
-  /* 'Dosis', sans-serif; */
-  background-color: #303030;
-  /* -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
+@import './tailwind.css';
+/* @import url('https://fonts.googleapis.com/css2?family=Dosis&family=Montserrat&display=swap'); */
