--- a/styles/modals.css
+++ b/styles/modals.css
@@ -1,5 +1,5 @@
 .modal {
-	position: absolute;
+	position: fixed;
 	/* height: 85vh; */
 	width: 100vw;
 	bottom: 0;
@@ -11,7 +11,7 @@
 
 .modal-content {
 	width: 100vw;
-	overflow: auto;
+	overflow-y: auto;
 	padding: 1rem 2rem;
 	color: black;
 	font-size: 24px;
